# scrapebadger-mcp

./: .gitignore  LICENSE  README.md  REGISTRY_SUBMISSION.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/scrapebadger_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
