[project]
name = "scrapebadger-mcp"
version = "0.1.1"
description = "MCP server for ScrapeBadger - Twitter/X scraping API for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ScrapeBadger", email = "support@scrapebadger.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai",
    "llm",
    "twitter",
    "x",
    "scraping",
    "api",
    "claude",
    "chatgpt",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "scrapebadger>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://scrapebadger.com"
Documentation = "https://docs.scrapebadger.com"
Repository = "https://github.com/scrape-badger/scrapebadger-mcp"
Issues = "https://github.com/scrape-badger/scrapebadger-mcp/issues"

[project.scripts]
scrapebadger-mcp = "scrapebadger_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapebadger_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
